clang/test/BSC/Negative/Method/Struct/struct_tag_name_call/struct_tag_name_call.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
};
int struct Foo::getA(struct Foo* this) {
    return 1;
}

int main() {
    Foo foo; // expected-error {{must use 'struct' tag to refer to type 'Foo'}}
    foo.getA(); 
    return 0;
}